<resources>
    <string name="app_name">Horario Medicinas</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="iniciar">Iniciar sesion</string>
    <string name="no_user">No tiene usuario, </string>
    <string name="create_user"> crear usuario.</string>
    <string name="text_forget_pass">¿Olvidó la clave?</string>
    <string name="repair_pass"> Recupere aquí.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_media">Medicamento Antihistaminico</string>
    <string name="title">Allerzitina</string>
    <string name="secondary_text">Alergias, Gripas, Rinitis</string>
    <string name="supporting_text">Medicamento para le control de las alergias, no produce sueño</string>
    <string name="action_1">Ver horario</string>
    <string name="action_2">Editar medicamento</string>
    <string name="tab_medicine">Medicina</string>
    <string name="tab_profile">Perfil</string>
    <string name="tab_time">Horario</string>
    <string name="title_activity_navigation">activity_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="horario_defecto">"12:30 PM "</string>
    <string name="mensaje_medicina">Titulo de la medicia</string>
    <string name="txt_registro_medicina">Registro medicina</string>
    <string name="txt_registro_descripcion">Registro descripcion</string>
    <string name="txt_registro_sintomas">Registro sintomas</string>
    <string name="mensaje_descripcion">Registro descripcion</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="carga_imagen">Oprima para subir imagen</string>
</resources>
