<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="80px"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_app">

        </ImageView>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/user"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="50px"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/pass"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="50px"
        android:paddingBottom="50px"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryDarkColor"
        android:background="@color/primaryDarkColor"
        android:text="@string/iniciar">
    </Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_user"/>
        <TextView
            android:id="@+id/create_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_user"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forget_pass"/>
        <TextView
            android:id="@+id/repair_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repair_pass"/>
    </LinearLayout>
</LinearLayout>