<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    >


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        ...
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_medication_black_24dp"
            android:text="@string/tab_medicine"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:text="@string/tab_time"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_person_black_24dp"
            android:text="@string/tab_profile"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/page"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>